# systeme-gestion-stock

./: .gitignore  .lighthouserc.json  ALTERNATIVES_DEPLOIEMENT.md  AMELIORATIONS_MAJEURES.md  CONFIGURATION_RAILWAY.md  CONFIGURATION_RAPIDE.md  CONTRIBUTING.md  CREER_REPOSITORY_GITHUB.md  DEMO.md  DEPANNAGE_RAILWAY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  ETAT_AVANCEMENT.md  FIREBASE_SETUP.md  GITHUB_SETUP.md  GUIDE_ACCES_DG.md  GUIDE_ACCES_PAGES.md  GUIDE_ACTIONS.md  GUIDE_CODES_PIN.md  GUIDE_DEPLOIEMENT_COMPLET.md  GUIDE_DIAGNOSTIC_HEROKU.md  GUIDE_ERREUR_HEROKU.md  GUIDE_FINAL_LISTE_ARTICLES.md  GUIDE_GESTION_PERMISSIONS.md  GUIDE_GITHUB.md  GUIDE_HEROKU.md  GUIDE_NETLIFY.md  GUIDE_NOUVELLES_PAGES.md  GUIDE_POINTAGE_QR.md  GUIDE_PYTHONANYWHERE.md  GUIDE_RAPIDE.md  GUIDE_REDEPLOIEMENT.md  GUIDE_RENDER.md  GUIDE_RH.md  GUIDE_SERVICES.md  GUIDE_SIGNATURE.md  GUIDE_TEST_WORKFLOW.md  GUIDE_VERCEL.md  INSTRUCTIONS_FINALES.md  INSTRUCTIONS_REDEMARRAGE.md  (+159 more)
.github/: labels.json  pull_request_template.md  release.yml
api/: index.py
public/: index.html  manifest.json  offline.html  sw.js
routers/: __init__.py  auth.py  maintenance.py  pdf_export.py  purchase_requests.py  purchases.py  reports.py  service_providers.py  services.py  stock.py  stock_movements.py  suppliers.py  users.py  vehicles.py
src/: App.js  index.css
static/: countries-cities.js  index.html
templates/: login.html  maintenance.html  purchase_requests.html  purchase_requests_backup.html  purchases.html  service_providers.html  services.html  stock.html  suppliers.html  user_management.html  (+1 more)
(+79 files in other folders)
