[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systeme-gestion-stock"
version = "1.0.0"
description = "Système de gestion de stock"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.68.2",
    "uvicorn[standard]==0.15.0",
    "sqlalchemy==1.4.23",
    "pydantic==1.8.2",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.5",
    "reportlab==3.6.13",
    "python-dateutil==2.8.2",
    "alembic==1.7.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

